# testapp

./: .env.production  .env.test  .gitignore  README.md  file_generator.py  pyproject.toml  requirements.txt
alembic/: env.py
app/: alembic1.py  config.py  database.py  exceptions.py  init_data.py  main.py
app/api/: deps.py
app/api/endpoints/: auth.py  contributions.py  definition.py  example.py  (+4 more)
app/auth/: blacklist.py  dependencies.py  security.py
app/core/: config.py  dependencies.py  security.py
app/crud/: auth.py  book.py  contribution.py  definition.py  example.py  form.py  note.py  pronunciation.py  relation.py  study.py  user.py  word.py  word_relation.py
app/crud_local/: word.py
app/models/: __init__.py  book.py  content.py  contribution.py  enums.py  note.py  quiz.py  relation.py  study.py  user.py  word.py
app/routers/: admin.py  auth.py  graph.py  note.py  relation.py  relation_book.py  study.py  user.py  word.py  word_definition.py  word_example.py  word_form.py  word_pronunciation.py  word_tag.py  wordbook.py
app/schemas/: auth.py  book.py  contribution.py  enums.py  note.py  relation.py  study.py  user.py  word.py  word_relation.py
app/services/: auth.py  email_service.py  graph.py  import_data.py  sms_service.py  third_party_auth.py
data/: oxford_3000.csv
scripts/: __init__.py  import_words.py  init_db.py  start_dev.py  start_prod.py  test.py
tests/: __init__.py  conftest.py  test_smtp.py  test_smtp2.py  test_verification.py
tests/test_api/: test_auth.py  test_words.py
tests/test_services/: test_graph.py
创业/单词图软件/: 单词图开发稿.md
