[project]
name = "API"
version = "0.1.0"
description = "基于FastAPI和SQLModel的英语学习图谱后端API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic==1.12.1",
    "fastapi==0.104.1",
    "httpx==0.25.2",
    "pandas==2.1.3",
    "passlib[bcrypt]==1.7.4",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "pytest==7.4.3",
    "sqlalchemy~=1.4.24",
    "sqlmodel~=0.0.8",
    "uvicorn[standard]==0.24.0",
]
[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
explicit = true